[tool.poetry]
name = "litestar-oauth"
version = "0.1.0"
description = ""
authors = ["Phyo <phyoakl@hexcode.tech>"]
readme = "README.md"
packages = [{include = "litestar_oauth"}]

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["full"], version = "2.0rc1"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
